<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="published" translatable="false">1 мая 2022 12:10</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="likes_amount" translatable="false">0</string>
    <string name="share_amount" translatable="false">0</string>
    <string name="visability_amount" translatable="false">50</string>
    <string name="menu_edit" translatable="false">Edit</string>
    />
    <string name="post_menu_remove" translatable="false">Remove</string>
    <string name="post_input_text" translatable="false">Post text</string>
    <string name="empty_post_error" translatable="false">Post is blank</string>
    <string name="edit_message" translatable="false">Edit massage</string>
    <string name="chooser_share_post" translatable="false">share_post</string>
    <string name="chooser_video_post" translatable="false">video_choose</string>
    />
</resources>